abstract class StringRes {
  static const appName = "Todo LiteUp";

  static const ok = "OK";
  static const close = "Đóng";
  static const cancel = "Huỷ";
  static const save = "Lưu";
  static const delete = "Xoá";
  static const edit = "Thay đổi";
  static const add = "Thêm mới";
  static const update = "Cập nhật";
  static const failed = "Thất bại";
  static const success = "Thành công";
  static const error = "Lỗi";
  static const failedMsg = "Có lỗi xảy ra khi lưu dữ liệu.";
  static const successMsg = "Thay đổi được lưu thành công!";

  static const all = 'Tất cả';
  static const doing = 'Cần làm';
  static const done = 'Hoàn tất';

  static const description = 'Mô tả';
  static const title = 'Tiêu đề';
  static const noData = "Không có dữ liệu";

  static const errorRequired = "Trường này không được trống";
}
