...
          ),
        ],
      ),
      body: _buildBody(context),
      bottomNavigationBar: _buildBottomBar(context),
      floatingActionButton: Semantics(
        label: 'fab_add_task',
        child: FloatingActionButton.extended(
          onPressed: () => _addTask(context),
          icon: const Icon(Icons.add),
          label: const Text(StringRes.add),
        ),
      ),
...
