appId: com.dasdang.todoliteup
name: create task test
---
- tapOn: "fab_add_task"
- waitForAnimationToEnd
- tapOn: "Tiêu đề"
- waitForAnimationToEnd
- runFlow:
    when:
      platform: iOS
    commands:
        - inputText: "Công việc mới"
        - tapOn: "Mô tả"
        - waitForAnimationToEnd
        - inputText: "Cần hoàn thành trước cuối tháng"
        - tapOn: "OK"
        - waitForAnimationToEnd:
            timeout: 1000
        - assertVisible: "Công việc mới"
- runFlow:
    when:
      platform: Android
    commands:
        - inputText: "New task"
        - tapOn: "Mô tả"
        - waitForAnimationToEnd
        - inputText: "Maestro keyboard: Unicode not supported"
        - tapOn: "OK"
        - waitForAnimationToEnd:
            timeout: 1000
        - assertVisible: "New task"
